3.33-2 confint method for svyttest (for Brian Guay)

3.33-1 two minor bug fixes for ABS contributions to calibrate()

3.33   Add explicit family= argument to svyglm() methods because of strange scoping problems (for Thomas Leeper)

       calibrate() now displays differences between sample and population names (for Stas Kolenikov)

       cal_names() displays what the auxiliary variable names will be for a formula

       regTermTest() now does Rao-Scott-type Wald tests, which I think are the same as SUDAAN's
       "Satterthwaite Adjusted Wald Tests" (but I don't have an example to verify).

3.32-2 Actually add the hyperbolic sine distance function

       Add AIC method for svycoxph

3.32-1 pseudo-rsquared paper is out: update reference

       Add cal.sinh for the hyperbolic sine distance function (used in CALMAR2) with code from Maciej Beręsewicz

       Coerce tbl_dfs to data frames in svydesign, svrepdesign, twophase, because they aren't actually a drop-in replacement.

3.32	Add diffs for calibration from Daniel Oehm at ABS

        - Sparse matrix support
	- Heteroscedasticity parameters
        - more flexible boundary constraints

        Update references to AIC/BIC paper, Statistical Science review paper

        More information on accuracy of pchisqsum methods

        svyglm() didn't work with missing values in database-backed designs (Anthony Damico)

3.31-8  Add svysurvreg() (for Pam Shaw and Eric Oh)

        Remove the tests that don't produce character-identical output on all platforms (for CRAN)

3.31-7  Add deff="replace" as an option for svyratio (for Chris Webb)

        Add psrsq() for pseudo-R^2 statistics (for Ward Kinkade)

3.31-6  Make database-backed svydesign work with *no* design variables  (for Anthony Damico and Guilherme Jacob)

3.31-5  predict.svyglm() uses object$xlevels and object$contrasts and so should be able to
        guess the right factor levels when they aren't supplied in newdata= (for @thosjleeper)
